[package]
name = "clipboard-sync"
version = "0.0.0-development"
edition = "2024"
build = "build.rs"

[package.metadata.winresource]
FileDescription = "Clipboard Sync"
ProductName = "Clipboard Sync"
CompanyName = "Felipe Santos"
LegalCopyright = "Copyright © 2025 Felipe Santos"
OriginalFilename = "ClipboardSync.exe"

[[bin]]
name = "ClipboardSync"
path = "src/main.rs"

[dependencies]
auto-launch = "0.6.0"
clipboard-rs = "0.3.2"
faccess = "0.2.4"
gethostname = "1.0.1"
log = "0.4.28"
notify = "8.0.0"
regex-lite = "0.1.7"
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
shell-words = "1.1.0"
simplelog = "0.12.2"
single-instance = "0.3.3"
tao = "0.34.3"
tray-icon = "0.21.1"
ureq = { version = "3.1.4", default-features = false, features = [
	"native-tls"
] }
walkdir = "2.5.0"
tinyfiledialogs = "3.9"
open = "5"
notify-rust = "4"
user-idle2 = "0.6"
rmbrr = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
win32job = "2"
windows-registry = "0.6.0"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_UI_Shell",
] }
widestring = "1.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
